[project]
name = "comfyui-videohelpersuite"
description = "Nodes related to video workflows"
version = "1.0.0"
license = "LICENSE"
dependencies = ["opencv-python", "imageio-ffmpeg"]

[project.urls]
Repository = "https://github.com/Kosinkadink/ComfyUI-VideoHelperSuite"

#  Used by Comfy Registry https://comfyregistry.org
[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-VideoHelperSuite"
Icon = ""
